--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,15 +4,16 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfDemo"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        mc:Ignorable="d" FontSize="18" FontFamily="Segoe UI"
+        Title="Our WPF Demo" Height="450" Width="800">
+    <Grid >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="506*"/>
+            <ColumnDefinition Width="57*"/>
             <ColumnDefinition Width="20"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -25,6 +26,10 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
+
+        <TextBlock Grid.Column="1" Grid.Row="1" FontSize="36" Text="WPF Super Demo" FontWeight="Bold"  Grid.ColumnSpan="4"/>
+        <TextBlock Grid.Column="1" Grid.Row="2" Text="First name" FontWeight="SemiBold"  />
+        <TextBox x:Name="firstNameText" Grid.Column="2" Grid.Row="2" Width="200"/>
 
 
     </Grid>
