--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -12,8 +12,9 @@
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="506*"/>
-            <ColumnDefinition Width="57*"/>
+            <ColumnDefinition Width="328*"/>
+            <ColumnDefinition Width="89*"/>
+            <ColumnDefinition Width="47*"/>
             <ColumnDefinition Width="20"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -27,9 +28,13 @@
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="1" Grid.Row="1" FontSize="36" Text="WPF Super Demo" FontWeight="Bold"  Grid.ColumnSpan="4"/>
-        <TextBlock Grid.Column="1" Grid.Row="2" Text="First name" FontWeight="SemiBold"  />
-        <TextBox x:Name="firstNameText" Grid.Column="2" Grid.Row="2" Width="200"/>
+        <TextBlock Grid.Column="1" Grid.Row="1" FontSize="36" Text="WPF Super Demo" FontWeight="Bold"  
+                   Grid.ColumnSpan="4" Margin="0,20"/>
+        <TextBlock Grid.Column="1" Grid.Row="2" Text="First name:" FontWeight="SemiBold"  Margin="0 0 20 0"/>
+        <TextBox x:Name="firstNameText" Grid.Column="2" Grid.Row="2" Width="200" Margin="0 0 0 20"/>
+        <Button  x:Name="submitButton" Content="Run Me " Grid.Column="1" Grid.Row="3"  Margin="0 10 20 0" 
+                 Padding="5" Grid.ColumnSpan="2" Background="#FF080BCF" Foreground="White" Click="submitButton_Click" />
+        
 
 
     </Grid>
