--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -32,7 +32,7 @@
                    Grid.ColumnSpan="4" Margin="0,20"/>
         <TextBlock Grid.Column="1" Grid.Row="2" Text="First name:" FontWeight="SemiBold"  Margin="0 0 20 0"/>
         <TextBox x:Name="firstNameText" Grid.Column="2" Grid.Row="2" Width="200" Margin="0 0 0 20"/>
-        <ComboBox  x:Name="myComboBox" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2"  Margin="0 10" Text="Country Name" IsEditable="True" IsReadOnly="True" >
+        <ComboBox  x:Name="myComboBox" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2"  Margin="0 10" Text="Country Name" >
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding FullName}" />
@@ -42,8 +42,11 @@
         <Button  x:Name="submitButton" Content="Run Me " Grid.Column="1" Grid.Row="4"  Margin="0 10 20 0" 
                  Padding="5" Grid.ColumnSpan="2" Background="#FF080BCF" Foreground="White" 
                  Click="submitButton_Click" />
-        
-       
+
+
+        <Image Grid.Column="4" Grid.Row="1" Grid.RowSpan="6" Source="/images/1.jpg" />
+
+
 
 
 
