--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -33,7 +33,11 @@
         <ComboBox  x:Name="myComboBox" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2"  Margin="0 10" Text="Country Name" >
             <ComboBox.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding FullName}" />
+                    <StackPanel Orientation="Horizontal">
+                        <Image  Source="/images/7.jpg"  Margin="0 0 10 0" Height="20" Width="20"/>
+                        <TextBlock Text="{Binding FullName}" />
+                    </StackPanel>
+                  
                 </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
@@ -43,8 +47,33 @@
 
 
        <!--<Image Grid.Column="4" Grid.Row="1" Grid.RowSpan="6" Source="/images/1.jpg"  Margin="20 0 0 0"/>-->
-        <MediaElement Grid.Column="4" Grid.Row="1" Grid.RowSpan="6" Source="E:\Visual_Studio_Projects\WPF_Applications\WPF_Demo_App\video/video.mp4"   LoadedBehavior="Play"  Margin="20 0 0 0"/>
+        <!--<MediaElement Grid.Column="4" Grid.Row="1" Grid.RowSpan="6" Source="E:\Visual_Studio_Projects\WPF_Applications\WPF_Demo_App\video/video.mp4"   LoadedBehavior="Play"  Margin="20 0 0 0"/>-->
 
+        <!--<StackPanel Grid.Row="1" Grid.Column="4" Grid.RowSpan="6" Orientation="Horizontal">
+           <Image  Source="/images/1.jpg"  Margin="20 0 0 0" MaxHeight="200"/>
+            <Image  Source="/images/2.jpg"  Margin="20 0 0 0" MaxHeight="200"/>
+            <Image  Source="/images/3.jpg"  Margin="20 0 0 0" MaxHeight="200"/>
+            <Image " Source="/images/4.jpg"  Margin="20 0 0 0" MaxHeight="200"/>
+
+        </StackPanel>-->
+
+        <!--<WrapPanel Grid.Row="1" Grid.Column="4" Grid.RowSpan="6" Orientation="Vertical">
+            <Image  Source="/images/1.jpg"  Margin="20 0 0 0" MaxHeight="200"/>
+            <Image  Source="/images/2.jpg"  Margin="20 0 0 0" MaxHeight="200"/>
+            <Image  Source="/images/3.jpg"  Margin="20 0 0 0" MaxHeight="200"/>
+            <Image " Source="/images/4.jpg"  Margin="20 0 0 0" MaxHeight="200"/>
+
+        </WrapPanel>-->
+
+        <ScrollViewer Grid.Row="1" Grid.Column="4" Grid.RowSpan="6" >
+            <StackPanel  Orientation="Vertical">
+                <Image Source="/images/1.jpg"  Margin="20 0 0 0" MaxWidth="200"/>
+                <Image Source="/images/2.jpg"  Margin="20 0 0 0"  MaxWidth="200"/>
+                <Image  Source="/images/3.jpg"  Margin="20 0 0 0" MaxWidth="200"/>
+                <Image Source="/images/4.jpg"  Margin="20 0 0 0" MaxWidth="200"/>
+
+            </StackPanel>
+        </ScrollViewer>
 
 
 
